--- a/english.html
+++ b/english.html
@@ -21,7 +21,7 @@
             <h1 class="p-header">The place to spill the tea</h1>
         </div>
         <nav class="icon-holders">
-            <img src="assets/svg/dark-mode.svg" class="svg-n svg-dark-m" alt="dark mode logo">
+            <!-- <img src="assets/svg/dark-mode.svg" class="svg-n svg-dark-m" alt="dark mode logo"> -->
             <a href="login.html">
                 <img src="assets/svg/avatar.svg" class="svg-n avatar" alt="login icon">
             </a>
@@ -133,12 +133,13 @@
     <footer>
         <section class="f-links">
             <a href="index.html" class="f-link">Home</a>
-            <a href="#" class="f-link">About</a>
+            <a href="about.html" class="f-link">About</a>
             <a href="login.html" class="f-link">Login</a>
         </section>
         <form>
             <p><label for="newsletter" class="newsletter">Sign up for our newsletter:</label></p>
             <input type="text" id="newsletter" name="" />
+            <button data-filter="" class="btn">Submit</button>
         </form>
     </footer>
     <!-- <script src="" async defer></script> -->
