--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h1 class="p-header" title="The place to spill the tea">The place to spill the tea</h1>
         </div>
         <nav class="icon-holders">
-            <img src="assets/svg/dark-mode.svg" class="svg-n svg-dark-m" alt="dark mode logo" title="Dark Mode Logo">
+            <!-- <img src="assets/svg/dark-mode.svg" class="svg-n svg-dark-m" alt="dark mode logo" title="Dark Mode Logo"> -->
             <a href="login.html">
                 <img src="assets/svg/avatar.svg" class="svg-n avatar" alt="login icon" title="User Login Icon">
             </a>
@@ -180,17 +180,17 @@
     <footer>
         <section class="f-links">
             <a href="index.html" class="f-link">Home</a>
-            <a href="#" class="f-link">About</a>
+            <a href="about.html" class="f-link">About</a>
             <a href="login.html" class="f-link">Login</a>
         </section>
         <form>
             <p><label for="newsletter" class="newsletter">Sign up for our newsletter:</label></p>
             <input type="text" id="newsletter" name="" />
+            <button data-filter="" class="btn">Submit</button>
         </form>
     </footer>
     <script src="js/app.js"></script>
     <script src="js/jquery.js"></script>
-    <!-- <script src="js/modal.js"></script> -->
 </body>
 
 </html>
