--- a/tea.html
+++ b/tea.html
@@ -21,7 +21,7 @@
             <h1 class="p-header">The place to spill the tea</h1>
         </div>
         <nav class="icon-holders">
-            <img src="assets/svg/dark-mode.svg" class="svg-n svg-dark-m" alt="dark mode logo">
+            <!-- <img src="assets/svg/dark-mode.svg" class="svg-n svg-dark-m" alt="dark mode logo"> -->
             <a href="login.html">
                 <img src="assets/svg/avatar.svg" class="svg-n avatar" alt="login icon">
             </a>
@@ -123,6 +123,7 @@
         <form>
             <p><label for="newsletter" class="newsletter">Sign up for our newsletter:</label></p>
             <input type="text" id="newsletter" name="" />
+            <button data-filter="" class="btn">Submit</button>
         </form>
     </footer>
     <!-- <script src="" async defer></script> -->
